--- a/.github/workflows/update-projects.yml
+++ b/.github/workflows/update-projects.yml
@@ -1,7 +1,7 @@
 name: Update Projects
 on:
-  schedule:
-    - cron: '0 0 * * *'
+  # schedule:
+  #   - cron: '0 0 * * *'
   workflow_dispatch:
 jobs:
   version-bump:
